*Empty MediaWiki Message*

--- a/Коми_гижысьяс_анбур_серти.mw
+++ b/Коми_гижысьяс_анбур_серти.mw
@@ -11,619 +11,624 @@
 ! Олан вояс
 |-
 |[[Ануфриева Альбина Зиновьевна]]	
-|1940-1996	
+|[[1940]]–[[1996]]	
 |-
 |[[Ануфриева Любовь]] (Баяр Люба)	
-|1987	
+|[[1987]]	
 |-
 |[[Артеев Пик Герасимович]]	
-|1937-1987	
+|[[1937]]–[[1987]]	
 |-
 |[[Афанасьев Анатолий Петрович]]	
-|1935-2004	
+|[[1935]]–[[2004]]	
 |-
 |[[Афанасьев Евгений Степанович]]	
-|1942–1998	
+|[[1942]]–[[1998]]	
 |-
 |[[Афанасьева Елена Евгеньевна]]	
-|1967	
+|[[1967]]	
 |-
 |[[Бабин Вячеслав Леонидович]] 	
-|1960	
+|[[1960]]
 |-
 |[[Баженова Ольга Николаевна]]	
-|1992	
+|[[1992]]
 |-
 |[[Безносиков Владимир Иванович]]	
-|1927	
+|[[1927]]–[[2008]]
 |-
 |[[Белых Иван Ильич]] (Б.Ильин)	
-|1946	
+|[[1946]]
 |-
-|[[Белых Николай Федорович]]	
-|1941-1992	
+|[[Белых Николай Фёдорович]]	
+|[[1941]]–[[1992]]	
 |-
 |[[Беляев Геннадий Васильевич]] (Г. Демин)	
-|1940	
+|[[1940]]–[[2008]]
 |-
 |[[Бутырева Галина Васильевна]]	
-|1944	
+|[[1944]]
 |-
 |[[Бушенёв Пётр Феликсович]]	
-|1956	
+|[[1956]]
 |-
 |[[Вавилин Иван Михайлович]] (Баярса Иван)	
-|1911-1975
+|[[1911]]–[[1975]]
 |-
 |[[Ванеев Альберт Егорович]]	
-|1933–2001	
+|[[1933]]–[[2001]]
 |-
 |[[Васютов Юрий Константинович]]	
-|1931–2006	
+|[[1931]]–[[2006]]
 |-
 |[[Власов Василий Иванович]]	
-|1916–1986	
+|[[1916]]–[[1986]]
 |-
 |[[Втюрина Людмила Зарниевна]] (Зарни Люся)	
-|1964	
+|[[1964]]
 |-
 |[[Вурдов Алексей Иванович]] 	
-|1956	
+|[[1956]]
 |-
 |[[Габов Александр Григорьевич]] (Гриш Саш)	
-|1912-1941	
+|[[1912]]–[[1941]]	
 |-
 |[[Габов Иван Николаевич]] (Иван Комсомольскӧй)	
-|1914-1941	
+|[[1914]]–[[1941]]
 |-
 |[[Говорухина Светлана Ювенальевна]]	
-|1959	
+|[[1959]]
 |-
 |[[Гордеева Антонина]]	
-|1960	
+|[[1960]]
 |-
-|[[Горчаков Гений Дмитриевич|Горчаков Геннадий Дмитриевич]] (Гений Горчаков)	
-|1927	
+|[[Горчаков Гений Дмитриевич]]
+|[[1927]]
 |-
 |[[Грабежова Валентина Михайловна]]	
-|1947	
+|[[1947]]
 |-
-|[[Гуляев Евгений Семенович]]	
-|1928-1977	
+|[[Гуляев Евгений Семёнович]]	
+|[[1928]]–[[1977]]
 |-
 |[[Доронин Михаил Павлович]] (Шыладорса Миш)	
-|1902-1939	
+|[[1902]]–[[1939]]
 |-
 |[[Доронин Павел Григорьевич]]	
-|1904-1967	
+|[[1904]]–[[1967]]
 |-
 |[[Дьяконов Николай Михайлович]]  	
-|1911–1982	
+|[[1911]]–[[1982]]
 |-
 |[[Елфимова Анжелика Геннадьевна]]	
-|1970	
+|[[1970]]
 |-
 |[[Елькин Василий Иванович]] (Иван Вась)	
-|1912–1942	
+|[[1912]]–[[1942]]
 |-
 |[[Елькин Михаил Андреевич]] 	
-|1958	
+|[[1958]]
 |-
-|[[Ельцова Елена Власовна]] (Алёна Ельцова)  	
-|1979	
+|[[Ельцова Елёна Власовна]] (Алёна Ельцова)  	
+|[[1979]]	
 |-
 |[[Ермолин Степан Иванович]] (Вань Степ)
-|1914–1961	
+|[[1914]]–[[1961]]
 |-
 |[[Забоев Александр Степанович]] (Сан Антус)	
-|1904-1980	
+|[[1904]]–[[1980]]
 |-
 |[[Забоева Феоктиста Ивановна]]	
-|1850-1943	
+|[[1850 во|1850]]–[[1943]]
+|-
+|[[Жаков Пальӧ Кальӧ]]
+|[[1866 во|1866]]–[[1926]]
 |-
 |[[Иванова Валентина Васильевна]] 	
-|1956	
+|[[1956]]
 |-
 |[[Игнатов Григорий Николаевич]]	
-|1974
+|[[1974]]
 |-
 |[[Игнатов Михаил Иванович]]	
-|1933-1999	
+|[[1933]]–[[1999]]
 |-
-|[[Игушев Евгений Александрович]]	
-|1939	
+|[[Игушев Евгений Александрович]]
+|[[1939]]
 |-
-|[[Изъюров  Иван Васильевич]] (Изъюр Иван) 	
-|1910–1995	
+|[[Изъюров Иван Васильевич]] (Изъюр Иван) 
+|[[1910]]–[[1995]]	
 |-
-|[[Изъюров Анатолий Степанович]]	
-|1932-1966	
+|[[Изъюров Анатолий Степанович]]
+|[[1932]]–[[1966]]
 |-
-|[[Истомин Иван Григорьевич]] (Сибырак Иван)	
-|1917-1988	
+|[[Истомин Иван Григорьевич]] (Сибырак Иван)
+|[[1917]]–[[1988]]
 |-
-|[[Каракчиев Валерий]]	
-|?	
+|[[Каракчиев Валерий]]
+|
 |-
-|[[Карманова Ксения]]	
-|1987	
+|[[Карманова Ксения]]
+|[[1987]]
 |-
-|[[Карманова Татьяна Михайловна]]	
-|1981
+|[[Карманова Татьяна Михайловна]]
+|[[1981]]
 |-
-|[[Кирпиченко Татьяна]]	
-|1990	
+|[[Кирпиченко Татьяна]]
+|[[1990]]
 |-
-|[[Кичин Василий Евгеньевич]]	
-|1848	
+|[[Кичин Василий Евгеньевич]]
+|[[1848 во|1848]]
 |-
-|[[Клочков Петр Фостирьевич]]	
-|1831-1853	
+|[[Клочков Петр Фостирьевич]]
+|[[1831 во|1831]]–[[1853 во|1853]]
 |-
-|[[Коданёв Иван Васильевич]]	
-|1916–1982	
+|[[Коданёв Иван Васильевич]]
+|[[1916]]–[[1982]]
 |-
-|[[Козлов Евгений Валерианович]] (Е.Валериан, Емеля Пилич)	
-|1960	
+|[[Козлов Евгений Валерианович]] (Е.Валериан, Емеля Пилич)
+|[[1960]]
 |-
-|[[Козлова Елена Васильевна]] 	
-|1954	
+|[[Козлова Елена Васильевна]] 
+|[[1954]]
 |-
-|[[Колегов Егор Васильевич]] (Василей Ёгор), 	
-|1895–1935	
+|[[Колегов Егор Васильевич]] (Василей Ёгор)
+|[[1895 во|1895]]–[[1935]]	
 |-
-|[[Коми Александр Павлович]]	
-|1926-1989	
+|[[Коми Александр Павлович]]
+|[[1926]]–[[1989]]	
 |-
-|[[Конюхов Дмитрий Васильевич]] (Вась Мить)	
-|1911-1982	
+|[[Конюхов Дмитрий Васильевич]] (Вась Мить)
+|[[1911]]–[[1982]]
 |-
-|[[Костромин Анфим Иванович]] (Лыатыса Анфим)	
-|1907	
+|[[Костромин Анфим Иванович]] (Лыатыса Анфим)
+|[[1907]]
 |-
-|[[Кузнецов Николай Владимирович]]	
-|1976
+|[[Кузнецов Николай Владимирович]]
+|[[1976]]
 |-
-|[[Куклина Раиса Ильинична]] (Илля Райö)	
-|1951	
+|[[Куклина Раиса Ильинична]] (Илля Райö)
+|[[1951]]
 |-
-|[[Куликов Сергей Лукич]]	
-|1921	
+|[[Куликов Сергей Лукич]]
+|[[1921]]
 |-
 |[[Куратов Василий Алексеевич]]	
-|1820-1868	
+|[[1820 во|1820]]–[[1868 во|1868]]	
 |-
 |[[Куратов Виталий Константинович]]	
-|1933-2003	
+|[[1933]]–[[2003]]	
 |-
-|[[Куратов Ӧльӧш Вань|Куратов Иван Алексеевич]]	
-|1839–1875	
+|[[Куратов Ӧльӧш Вань|Куратов Иван Алексеевич]]
+|[[1839 во|1839]]–[[1875 во|1875]]	
 |-
-|[[Куратова Нина Ильинична]]	
-|1930	
+|[[Куратова Нина Никитична]]
+|[[1930]]
 |-
-|[[Кушманов Василий Егорович]]	
-|1929-1995	
+|[[Кушманов Василий Егорович]]
+|[[1929]]–[[1995]]	
 |-
-|[[Ларев Александр Константинович]]	
-|1930	
+|[[Ларев Александр Константинович]]
+|[[1930]]
 |-
-|[[Латкин Владимир Павлович]]	
-|1910-1942	
+|[[Латкин Владимир Павлович]]
+|[[1910]]–[[1942]]	
 |-
-|[[Лебедев  Михаил Николаевич]] (Юсь)  	
-|1877–1951	
+|[[Лебедев Михаил Николаевич]] (Юсь)
+|[[1877 во|1877]]–[[1951]]	
 |-
-|[[Леканов Василий Дмитриевич]]  	
-|1918–1989	
+|[[Леканов Василий Дмитриевич]] 
+|[[1918]]–[[1989]]
 |-
-|[[Липин Петр Васильевич]]	
-|1932	
+|[[Липин Пётр Васильевич]]
+|[[1932]]	
 |-
-|[[Лобанова Евгения Михайловна]]	
-|1989	
+|[[Лобанова Евгения Михайловна]]
+|[[1989]]
 |-
 |[[Логинов Михаил]]	
-|?	
+|
 |-
-|[[Лодыгин Василий Григорьевич]]	
-|1947	
+|[[Лодыгин Василий Григорьевич]]
+|[[1947]]	
 |-
-|[[Лудыков Михаил Ильич]]	
-|1930	
+|[[Лудыков Михаил Ильич]]
+|[[1930]]
 |-
-|[[Лужиков Александр Михайлович]]	
-|1964-2006
+|[[Лужиков Александр Михайлович]]
+|[[1964]]–[[2006]]
 |-
-|'''Лыткин Василий Ильич''' ([[Илля Вась]])	
-|1895–1981	
+|'''Лыткин Василий Ильич''' ([[Илля Вась]])
+|[[1895 во|1895]]–[[1981]]	
 |-
-|[[Лыткин Георгий Степанович]] (Ёгуш)	
-|1835–1907	
+|[[Лыткин Георгий Степанович]] (Ёгуш)
+|[[1835 во|1835]]–[[1907]]	
 |-
-|[[Лыюров Александр Алексеевич]] (А.Зеленцов)	
-|1923-1990	
+|[[Лыюров Александр Алексеевич]] (А.Зеленцов)
+|[[1923]]–[[1990]]	
 |-
 |[[Маегов Афанасий Андреевич]] (Варыш)  	
-|1893–1942   	
+|[[1893 во|1893]]–[[1942]]   	
 |-
 |[[Малафеев Павел Степанович]]	
-|1907-?	
+|[[1907]]
 |-
 |[[Мальцев Александр Михайлович]]	
-|1924-1989	
+|[[1924]]–[[1989]]	
 |-
-|[[Мальцева Алена Анатольевна]]	
-|?	
+|[[Мальцева Алёна Анатольевна]]	
+|
 |-
 |[[Матвеев Александр Михайлович]]	
-|1919-1981	
+|[[1919]]–[[1981]]	
 |-
-|[[Михайлова Зоя В. ]]	
-|?	
+|[[Михайлова Зоя В.]]	
+|
 |-
 |[[Мишарин Алексей Васильевич]] 	
-|1949	
+|[[1949]]
 |-
 |[[Мишарина Александра Петровна]] (Петыр Саньö)	
-|1946	
+|[[1946]]
 |-
-|[[Морозов Сергей Михайлович]]	
-|1913-1988	
+|[[Морозов Сергей Михайлович]]
+|[[1913]]–[[1988]]
 |-
-|[[Надеев А.Н. ]] (Чард)	
-|?	
+|[[Надеев Алексей Николаевич]] (Чард)
+|[[1895 во|1895]]–[[1992]]
 |-
-|[[Напалков Виктор Егорович]]	
-|1938	
+|[[Напалков Виктор Егорович]]
+|[[1938]]
 |-
-|[[Некрасов Александр Васильевич]] (А.Позяломов)	
-|1952	
+|[[Некрасов Александр Васильевич]] (А.Позяломов)
+|[[1952]]
 |-
-|[[Некрасов Александр Иванович]] (Гамса)	
-|1931
+|[[Некрасов Александр Иванович]] (Гамса)
+|[[1931]]
 |-
-|[[Нестерова Алёна Николаевна]] (Алёна Старцева)	
-|1985
+|[[Нестерова Алёна Николаевна]] (Алёна Старцева)
+|[[1985]]
 |-
-|[[Никулин Николай Егорович]]	
-|1932-1993	
+|[[Никулин Николай Егорович]]
+|[[1932]]–[[1993]]
 |-
-|[[Ногиев Иван Иванович]] (Парма Вань)	
-|1952	
+|[[Ногиев Иван Иванович]] (Парма Вань)
+|[[1952]]
 |-
-|[[Образцов Пантелеймон Александрович]]  	
-|1909-1984	
+|[[Образцов Пантелеймон Александрович]] 
+|[[1909]]–[[1984]]
 |-
-|[[Обрезкова Нина Александровна]] 	
-|1965	
+|[[Обрезкова Нина Александровна]]
+|[[1965]]
 |-
-|[[Огнев Леонид Степанович]]	
-|1932-1991	
+|[[Огнев Леонид Степанович]]
+|[[1932]]–[[1991]]
 |-
-|[[Одинцов Алексей Серафимович]] 	
-|1938	
+|[[Одинцов Алексей Серафимович]] 
+|[[1938]]
 |-
 |[[Осипов Иван Александрович]] (Вокан, Сотчöм Вань)	
-|1911-1942	
+|[[1911]]–[[1942]]
 |-
-|[[Павлова Анастасия]]	
-|1984	
+|[[Павлова Анастасия]]
+|[[1984]]	
 |-
 |[[Павлова Надежда Мисаиловна]]
-|1966	
+|[[1966]]
 |-
 |[[Палкин Борис Александрович]]
-|1930-1992	
+|[[1930]]–[[1992]]
 |-
 |[[Палкин Леонид Николаевич]]
-|1932	
+|[[1932]]
 |-
-|[[Панюков Александр Александрович]] 
-|1936	
+|[[Панюков Александр Александрович]]
+|[[1936]]
 |-
 |[[Парначев Александр Николаевич]]
-|1947	
+|[[1947]]
 |-
 |[[Подоров Иван Гаврилович]] (Гаврил Иван)
-|1906-1942	
+|[[1906]]–[[1942]]
 |-
 |[[Полугрудов Алексей Владимирович]] (Лытун Лёш)
-|1976	
+|[[1976]]
 |-
-|[[Попов Алексей Вячеславович]] (Висер Öль, Камай Олеш)	
-|1950	
+|[[Попов Алексей Вячеславович]] (Висер Öль, Камай Олеш)
+|[[1950]]
 |-
 |[[Попов Андрей Алексеевич]] (Ӧльӧк Ӧндрей)  	
-|1909-1939	
+|[[1909]]-[[1939]]
+|-
+|[[Попов Андрей Алексеевич]] (Ӧльӧк Ӧндрей)  	
+|[[1909]]–[[1939]]
 |-
 |[[Попов Андрей Ефимович]]  	
-|1816-1865	
+|[[1816 во|1816]]–[[1865 во|1865]]
 |-
 |[[Попов Василий Иванович]] (Висер Вась)	
-|1921-1991	
+|[[1921]]–[[1991]]	
 |-
 |[[Попов Владимир Александрович]] (В.Санин)	
-|1934–1995	
+|[[1934]]–[[1995]]	
 |-
 |[[Попов Геннадий Иванович]] (Висер вожса Öнись дядь)	
-|1952	
+|[[1952]]	
 |-
 |[[Попов Николай Павлович]] (Жугыль) 	
-|1901-1971	
+|[[1901]]–[[1971]]	
 |-
 |[[Попов Полиевкт Павлович]] (П. Мезенин)	
-|1912-1958	
+|[[1912]]–[[1958]]	
 |-
 |[[Попов Прокопий Спиридонович]] (Спира Прокö)	
-|1908–1979	
+|[[1908]]–[[1979]]	
 |-
 |[[Попов Серафим Алексеевич]] (Öльöш Сим)	
-|1913–2003	
+|[[1913]]–[[2003]]
 |-
-|[[Попов Федор Васильевич]] (Вась Педöр) 	
-|1898–1922	
+|[[Попов Фёдор Васильевич]] (Вась Педöр) 	
+|[[1898 во|1898]]–[[1922]]
 |-
 |[[Попов Эраст Алексеевич]]	
-|1926-1986	
+|[[1926]]–[[1986]]
 |-
-|[[Попова Юстина Аверкиевна]] (Шоль, Войт)	
-|1896-1980	
+|[[Попова Юстина Аверкиевна]] (Шоль, Войт)
+|[[1896 во|1896]]–[[1980]]
 |-
-|[[Потапов Егор Васильевич]] 	
-|1937-1982	
+|[[Потапов Егор Васильевич]] 
+|[[1937]]–[[1982]]	
 |-
-|[[Потолицын Иван Иванович]]	
-|1913–1978	
+|[[Потолицын Иван Иванович]]
+|[[1913]]–[[1978]]
 |-
-|[[Прокушев А. ]]	
-|?	
+|[[Прокушев А.]]
+|
 |-
-|[[Прошева Зинаида Александровна]]	
-|1931	
+|[[Прошева Зинаида Александровна]]
+|[[1931]]
 |-
-|[[Пунегов Николай Трофимович]]	
-|1919-1985	
+|[[Пунегов Николай Трофимович]]
+|[[1919]]–[[1985]]
 |-
-|[[Пылаева Соломония Васильевна]]	
-|1930-
+|[[Пылаева Соломония Васильевна]]
+|[[1930]]
 |-
-|[[Пыстин Илья Иванович]]  (Иливапыс)  	
-|1907–1951	
+|[[Пыстин Илья Иванович]] (Иливапыс)
+|[[1907]]–[[1951]]
 |-
-|[[Раевский Степан Семёнович]]  (С. Зотов)	
-|1918–1996	
+|[[Раевский Степан Семёнович]] (С. Зотов)
+|[[1918]]–[[1996]]
 |-
-|[[Размыслов Александр Васильевич]]	
-|1927-1994	
+|[[Размыслов Александр Васильевич]]
+|[[1927]]–[[1994]]	
 |-
-|[[Размыслов Ананий Прокопьевич]] 	
-|1915-1943	
+|[[Размыслов Ананий Прокопьевич]] 
+|[[1915]]–[[1943]]
 |-
-|[[Ракин Анатолий Николаевич]]	
-|1949	
+|[[Ракин Анатолий Николаевич]]
+|[[1949]]	
 |-
-|[[Распутин Петр Васильевич]]	
-|1820-1901	
+|[[Распутин Пётр Васильевич]]	
+|[[1820 во|1820]]–[[1901]]	
 |-
 |[[Рассыхаев Василий Николаевич]]	
-|1922-1990
+|[[1922]]–[[1990]]
 |-
 |[[Рассыхаев Иван Степанович]] (Степан Иван)	
-|1878-1968	
+|[[1878 во|1878]]–[[1968]]	
 |-
 |[[Рогова Зоя Ивановна]] (Доронина)	
-|1918	
+|[[1918]]	
 |-
-|[[Рочев Егор Васильевич]]	
-|1937	
+|[[Рочев Егор Васильевич]]
+|[[1937]]
 |-
-|[[Рочев Яков Митрофанович]] (Митрук Як)  	
-|1909–1977	
+|[[Рочев Яков Митрофанович]] (Митрук Як)
+|[[1909]]–[[1977]]
 |-
-|'''Савин Виктор Алексеевич''' ([[Нёбдінса Виттор]]) 	
-|1888-1943	
+|'''Савин Виктор Алексеевич''' ([[Нёбдінса Виттор]])
+|[[1888 во|1888]]–[[1943]]
 |-
-|[[Сажин Иван Иванович]] (Ичӧт Иван)  	
-|1904-1951	
+|[[Сажин Иван Иванович]] (Ичӧт Иван)
+|[[1904]]–[[1951]]
 |-
-|[[Сажина Маргарита Ивановна]]	
-|1929-2000	
+|[[Сажина Маргарита Ивановна]]
+|[[1929]]–[[2000]]
 |-
-|[[Селиванова Альбина]]	
-|1942	
+|[[Селиванова Альбина]]
+|[[1942]]
 |-
-|[[Семяшкин Михаил Степанович]]	
-|1941	
+|[[Семяшкин Михаил Степанович]]
+|[[1941]]
 |-
-|[[Сердитов Константин Степанович]] (Скöр Кöсьта)	
-|1961	
+|[[Сердитов Константин Степанович]] (Скöр Кöсьта)
+|[[1961]]
 |-
-|[[Симаков Иван Николаевич]] (Сим Вань)	
-|1906-1943	
+|[[Симаков Иван Николаевич]] (Сим Вань)
+|[[1906]]–[[1943]]
 |-
 |[[Старцев Александр Дементьевич]] (Тикöн Öльöксан)	
-|1908-1943	
+|[[1908]]–[[1943]]	
 |-
-|[[Старцев Георгий Афанасьевич]] (Опонь Ёгор)	
-|1902-1943	
+|[[Старцев Георгий Афанасьевич]] (Опонь Ёгор)
+|[[1902]]–[[1943]]
 |-
-|[[Старцев Зосима Алексеевич]] (Акинь пи)	
-|1902-1961	
+|[[Старцев Зосима Алексеевич]] (Акинь пи)
+|[[1902]]–[[1961]]
 |-
-|[[Старцев Николай Александрович]] (Тикöн Коляй)	
-|1907-1943	
+|[[Старцев Николай Александрович]] (Тикöн Коляй)
+|[[1907]]–[[1943]]
 |-
-|[[Суханова Агния Андреевна]] (Ӧньӧ Агни)  	
-|1884-1925	
+|[[Суханова Агния Андреевна]] (Ӧньӧ Агни)
+|[[1884 во|1884]]–[[1925]]
 |-
-|[[Тарабукин Андрей Степанович]]	
-|1936-1977
+|[[Тарабукин Андрей Степанович]]
+|[[1936]]–[[1977]]
 |-
-|[[Тарабукин Иван Иванович]]	
-|1902-1980	
+|[[Тарабукин Иван Иванович]]
+|[[1902]]–[[1980]]
 |-
-|[[Тентюков Борис Пантелеймонович]]	
-|1922-1978	
+|[[Тентюков Борис Пантелеймонович]]
+|[[1922]]–[[1978]]
 |-
-|[[Терентьев Семён Константинович]]   	
-|1945 	
+|[[Терентьев Семён Константинович]]   
+|[[1945]]
 |-
-|[[Тимин Владимир Васильевич]] (Игö Васьö Володь)	
-|1937	
+|[[Тимин Владимир Васильевич]] (Игö Васьö Володь)
+|[[1937]]
 |-
 |[[Тимушев Алексей Степанович]]	
-|1934-1975	
+|[[1934]]–[[1975]]	
 |-
 |[[Тимушев Анисим Петрович]] (Пармазон)	
-|1898-1947	
+|[[1898 во|1898]]–[[1947]]	
 |-
-|[[Тимушев Степан Федорович]]  	
-|1919–1986	
+|[[Тимушев Степан Фёдорович]]  	
+|[[1919]]–[[1986]]	
 |-
 |[[Тимушев Эдуард Алексеевич]]  	
-|1962–2006
+|[[1962]]–[[2006]]
 |-
 |[[Титов Иван Павлович]] (Тит Паш Вань, И.Лучев)	
-|1908-1941	
+|[[1908]]–[[1941]]	
 |-
 |[[Торлопов Георгий Иванович]] (Ивö Ёгор)
-|1913-2001
+|[[1913]]–[[2001]]
 |-
-|[[Торопов Василий Павлович]]	
-|1929-2006
+|[[Торопов Василий Павлович]]
+|[[1929]]–[[2006]]
 |-
-|[[Торопов Иван Григорьевич]]	
-|1928-2011
+|[[Торопов Иван Григорьевич]]
+|[[1928]]–[[2011 во|2011]]
 |-
-|[[Третьяков Владислав Григорьевич]]	
-|1938	
+|[[Третьяков Владислав Григорьевич]]
+|[[1938]]
 |-
-|[[Туркин Адольф Иванович]]	
-|1936-1997	
+|[[Туркин Адольф Иванович]]
+|[[1936]]–[[1997]]
 |-
-|[[Туркин Константин Иванович]]	
-|1902-1971	
+|[[Туркин Константин Иванович]]
+|[[1902]]–[[1971]]
 |-
-|[[Тюрнин Николай Алексеевич]] 	
-|1956	
+|[[Тюрнин Николай Алексеевич]]
+|[[1956]]
 |-
-|[[Ульянов Александр Васильевич]] 	
-|1953	
+|[[Ульянов Александр Васильевич]]
+|[[1953]]
 |-
-|[[Уляшев Виталий Васильевич]]	
-|1946	
+|[[Уляшев Виталий Васильевич]]
+|[[1946]]
 |-
-|[[Уляшев Игорь Иванович]]	
-|1967-2005
+|[[Уляшев Игорь Иванович]]
+|[[1967]]–[[2005]]
 |-
-|[[Уляшов Олег Иванович]]	
-|1964	
+|[[Уляшов Олег Иванович]]
+|[[1964]]
 |-
-|[[Фёдоров Геннадий Александрович]] (Педь Гень) 	
-|1909–1990	
+|[[Фёдоров Геннадий Александрович]] (Педь Гень)
+|[[1909]]–[[1990]]
 |-
-|[[Фролов Николай Андрианович]] (Сук Парма)	
-|1909–1987	
+|[[Фролов Николай Андрианович]] (Сук Парма)
+|[[1909]]–[[1987]]
 |-
-|[[Хатанзейский Григорий Фёдорович]]	
-|1977
+|[[Хатанзейский Григорий Фёдорович]]
+|[[1977]]
 |-
-|[[Худяев Иван Ефимович]] (Кос Кабыр) 	
-|1902-1933	
+|[[Худяев Иван Ефимович]] (Кос Кабыр)
+|[[1902]]–[[1933]]
 |-
-|[[Цыпанов Евгений Александрович]]	
-|1960	
+|[[Цыпанов Евгений Александрович]]
+|[[1960]]	
 |-
-|[[Чеусов Алексей Александрович]] 	
-|1882-1940	
+|[[Чеусов Алексей Александрович]]
+|[[1882 во|1882]]–[[1940]]
 |-
-|'''Чисталев Вениамин Тимофеевич''' ([[Тима Вень]]) 	
-|1890-1939	
+|'''Чисталев Вениамин Тимофеевич''' ([[Тима Вень]])
+|[[1890 во|1890]]–[[1939]]
 |-
-|[[Чисталёв Иона Тимофеевич]] (Жан Морос)	
-|1893-1923	
+|[[Чисталёв Иона Тимофеевич]] (Жан Морос)
+|[[1893 во|1893]]–[[1923]]
 |-
-|[[Чувьюрова Лидия Даниловна]]	
-|1949–1993	
+|[[Чувьюрова Лидия Даниловна]]
+|[[1949]]–[[1993]]
 |-
-|[[Чупров Яков Иванович]]  (Биа Öгыр)	
-|1906-1942	
+|[[Чупров Яков Иванович]] (Биа Öгыр)
+|[[1906]]–[[1942]]
 |-
-|[[Шаманов Алексей Александрович]]	
-|1918-1943	
+|[[Шаманов Алексей Александрович]]
+|[[1918]]–[[1943]]
 |-
-|[[Шахов Борис Федотович]]	
-|1928-2002	
+|[[Шахов Борис Фёдотович]]
+|[[1928]]–[[2002]]
 |-
-|[[Шахов Егор Александрович]] (Сандрик Ёгор, Ö.Е.Шаков)	
-|1907-1938	
+|[[Шахов Егор Александрович]] (Сандрик Ёгор, Ö.Е.Шаков)
+|[[1907]]–[[1938]]
 |-
-|[[Шахов Николай Александрович]] (Сандрик Микол) 	
-|1898–1942	
+|[[Шахов Николай Александрович]] (Сандрик Микол)
+|[[1898 во|1898]]–[[1942]]
 |-
-|[[Шахов Пётр Федотович]] (Педот Петыр)	
-|1931-2006
+|[[Шахов Пётр Федотович]] (Педот Петыр)
+|[[1931]]–[[2006]]
 |-
-|[[Шеболкин Павел Андреевич]] (Выль Паш)	
-|1905-1963	
+|[[Шеболкин Павел Андреевич]] (Выль Паш)
+|[[1905]]–[[1963]]
 |-
-|[[Шебырев Александр Васильевич]]	
-|1960	
+|[[Шебырев Александр Васильевич]]
+|[[1960]]
 |-
-|[[Шергин Александр Васильевич]]	
-|1789-1837	
+|[[Шергин Александр Васильевич]]
+|[[1789 во|1789]]–[[1837 во|1837]]
 |-
-|[[Шестаков Михаил Иванович]] (Мивашеков)  	
-|1904-1942	
+|[[Шестаков Михаил Иванович]] (Мивашеков)
+|[[1904]]–[[1942]]
 |-
-|[[Шиликова Зоя Васильевна]]	
-|1940	
+|[[Шиликова Зоя Васильевна]]
+|[[1940]]
 |-
-|[[Ширяев Владимир Архипович]] (В.Архипов, В.Трофимов)	
-|1926–1979	
+|[[Ширяев Владимир Архипович]] (В.Архипов, В.Трофимов)
+|[[1926]]–[[1979]]
 |-
-|[[Шомысов Владимир Игоревич]]	
-|1954	
+|[[Шомысов Владимир Игоревич]]
+|[[1954]]
 |-
-|[[Шомысова Алёна]]	
-|1986
+|[[Шомысова Алёна]]
+|[[1986]]
 |-
-|[[Шомысова Анастасия Александровна]]	
-|1981	
+|[[Шомысова Анастасия Александровна]]
+|[[1981]]
 |-
-|[[Шуктомов Ганс Александрович]]	
-|1929	
+|[[Шуктомов Ганс Александрович]]
+|[[1929]]
 |-
-|[[Шуктомова Анастасия Арсентьевна]]	
-|1891-1975	
+|[[Шуктомова Анастасия Арсентьевна]]
+|[[1891 во|1891]]-[[1975]]
 |-
-|[[Щербаков Федор Васильевич]] (Эдуард Ганс, Ф.Зырянов)	
-|1914–1978	
+|[[Щербаков Фёдор Васильевич]] (Эдуард Ганс, Ф.Зырянов)
+|[[1914]]–[[1978]]
 |-
-|[[Щукин Николай Александрович]]	
-|1933	
+|[[Щукин Николай Александрович]]
+|[[1933]]
 |-
 |[[Югов Степан Александрович]]	
-|1958-2004	
+|[[1958]]–[[2004]]	
 |-
 |[[Юхнин  Василий Васильевич]] (Луздор Вась, Öнчу Вась) 	
-|1907–1960	
+|[[1907]]–[[1960]]
 |-
-|[[Юшков Геннадий Анатольевич]]	
-|1932-2009	
+|[[Юшков Геннадий Анатольевич]]
+|[[1932]]–[[2009]]
 |-
-|[[Яковлев Юрий Дмитриевич]]	
-|1955	
+|[[Яковлев Юрий Дмитриевич]]
+|[[1955]]
 |-
-|[[Ярасов Борис Степанович]] (Биавир)	
-|1908-1942	
+|[[Ярасов Борис Степанович]] (Биавир)
+|[[1908]]-[[1942]]
 |-
 |}
 
-
 ==Перым коми гижысьяс==
-Перым комиӧн гижӧны [[Перым Коми кытш]]са комияс. 
+[[Перым коми кыв|Перым комиӧн]] гижӧны [[Перым Коми кытш]]са комияс. 
 
 {| border="1" cellpadding="4" cellspacing="0" style="border:1px solid #aaa; border-collapse:collapse"
 |- bgcolor="#ECECEC"
@@ -631,319 +636,319 @@
 ! Олан вояс
 |- 
 | style="text-align:left;" |[[Аксёнова Ольга Петровна]]
-| align="right" | 1961
+| align="right" | [[1961]]
 |-
 | style="text-align:left;" |Аникин Александр 
-| align="right" | ????
+| align="right" |
 |-
 | style="text-align:left;" |[[Баталов Валериан Яковлевич]] 
-| align="right" | 1926-1998
+| align="right" | [[1926]]–[[1998]]
 |-
 | style="text-align:left;" |Батуев Б. 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |[[Бачева Галина Михайловна]] 
-| align="right" | 1952
+| align="right" | [[1952]]
 |-
 | style="text-align:left;" |Бормотов Николай Макарович 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |Бормотова Валентина Владимировна 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |Боталов Иван Васильевич 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |Боталов М.  
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |Боталова Алевтина 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |[[Ботева Елена Васильевна]] 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |Бушуева Ольга 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |Вавилин Вл. 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |[[Вавилин Михаил Дмитриевич]] 
-| align="right" | 1921-1992
+| align="right" | [[1921]]–[[1992]]
 |-
 | style="text-align:left;" |[[Гагарин Иван Дмитриевич]] 
-| align="right" | 1916-1941
+| align="right" | [[1916]]–[[1941]]
 |-
 | style="text-align:left;" |Гордеева Тамара Ивановна 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |[[Грибанов Спиридон Федотович]] 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |[[Грибова Любовь Степановна]] 
-| align="right" | 1933-1986
+| align="right" | [[1933]]–[[1986]]
 |-
 | style="text-align:left;" |[[Гуляева Людмила Петровна]] 
-| align="right" | 1952
+| align="right" | [[1952]]
 |-
 | style="text-align:left;" |Денисов Иван 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |[[Долдина Анна Григорьевна]] 
-| align="right" | 1930-1996
+| align="right" | [[1930]]–[[1996]]
 |-
 | style="text-align:left;" |Дружинина Е. 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |[[Ермаков Александр Константинович]] 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |Ермаков Александр ? 
-| align="right" | 1960–2006
+| align="right" | [[1960]]–[[2006]]
 |-
 | style="text-align:left;" |Ермакова Ольга Николаевна 
-| align="right" | 1980
+| align="right" | [[1980]]
 |-
 | style="text-align:left;" |Златин Прокопий Прокопьевич 
-| align="right" | 1913-1949
+| align="right" | [[1913]]–[[1949]]
 |-
 | style="text-align:left;" |Зубов Андрей Никифорович ([[Питю Ӧньӧ]]) 
-| align="right" | 1899-1937
+| align="right" | [[1899 во|1899]]–[[1937]]
 |-
 | style="text-align:left;" |Зубова Л.
-| align="right" | ???? 
+| align="right" |  
 |-
 | style="text-align:left;" |[[Исаев Василий Иванович]] 
-| align="right" | 1923-1984
+| align="right" | [[1923]]–[[1984]]
 |-
 | style="text-align:left;" |Исаев Константин 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |[[Исаева Нина Васильевна|Исаева (Бадина) Нина Васильевна]] 
-| align="right" | 1955
+| align="right" | [[1955]]
 |-
 | style="text-align:left;" |Исакова Т.
-| align="right" | ???? 
+| align="right" | 
 |-
 | style="text-align:left;" |[[Истомин Аркадий Степанович]] 
-| align="right" | 1956
+| align="right" | [[1956]]
 |-
 | style="text-align:left;" |[[Истомин Фёдор Степанович]] 
-| align="right" | 1954
+| align="right" | [[1954]]
 |-
 | style="text-align:left;" |[[Истомина Анна Юрьевна]] 
-| align="right" | 1964
+| align="right" | [[1964]]
 |-
 | style="text-align:left;" |Казанцева Анна Прохоровна (Фёдорова дер, Юсьв.) 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |Казаринова Людмила 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |Калин Василий 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |[[Канюков Виталий Изосимович]] 
-| align="right" | 1928-
+| align="right" | [[1928]]–
 |-
 | style="text-align:left;" |Караваев Илья 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |Караваев Н. 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |Караваев Пётр 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |[[Караваев Степан Иванович|Караваев Степан Иванович (Иву Стёпко)]] 
-| align="right" | 1908-1974
+| align="right" | [[1908]]–[[1974]]
 |-
 | style="text-align:left;" |Кетова Е. 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |[[Климов Василий Васильевич]] 
-| align="right" | 1927
+| align="right" | [[1927]]
 |-
 | style="text-align:left;" |[[Козлов Василий Васильевич]] 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |Коколева Валентина Николаевна 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |[[Кольчурин Василий Григорьевич]] 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |[[Коньшина Елена Ивановна]] 
-| align="right" | 1970
+| align="right" | [[1970]]
 |-
 | style="text-align:left;" |Кривощёков М 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |Кривощёкова Д.Е. 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |Кривощёкова Т.
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |[[Кривощёкова-Гантман Антонина Семёновна]] 
-| align="right" | 1921-1995
+| align="right" | [[1921]]–[[1995]]
 |-
 | style="text-align:left;" |Куликова А. 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |Кучева В. 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |Лаптев Дмитрий 
-| align="right" | ????
+| align="right" | 
 |- 
 | style="text-align:left;" |[[Лихачёв Михаил Павлович]] 
-| align="right" | 1901-1937
+| align="right" | [[1901]]–[[1937]]
 |-
 | style="text-align:left;" |Мальцева Надежда Александровна 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |Меркушева Мария Александровна 
-| align="right" | 1954
+| align="right" | [[1954]]
 |-
 | style="text-align:left;" |[[Минин Иван Алексеевич]] 
-| align="right" | 1926-1990
+| align="right" | [[1926]]–[[1990]]
 |-
 | style="text-align:left;" |Минина Татьяна 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |Митюкова Вера 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |[[Можаев Спиридон Афанасьевич]] 
-| align="right" | 1906-1989
+| align="right" | [[1906]]–[[1989]]
 |-
 | style="text-align:left;" |[[Мошегова Анна Трофимовна]] 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |[[Никитин Леонид Егорович]] 
-| align="right" | 1956
+| align="right" | [[1956]]
 |-
 | style="text-align:left;" |[[Никитина Людмила Алексевна|Никитина (Батина) Людмила Алексевна]] 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |[[Нилогов Леонид Егорович]] 
-| align="right" | 1924-1996
+| align="right" | [[1924]]–[[1996]]
 |-
 | style="text-align:left;" |Отинова Анна 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |Павлова Елена 
-| align="right" | 1976
+| align="right" | [[1976]]
 |-
 | style="text-align:left;" |Пахоруков Николай Васильевич 
-| align="right" | 1928-2007
+| align="right" | [[1928]]–[[2007]]
 |-
 | style="text-align:left;" |[[Пахорукова Вера Васильевна]] 
-| align="right" | 1937
+| align="right" | [[1937]]
 |-
 | style="text-align:left;" |Петров Виталий Иванович 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |Плотникова Т. 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |Попов Вячеслав Петрович 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |[[Попов Николай Васильевич|Попов Николай Васильевич (Василь Миков)]] 
-| align="right" |1902-1975
+| align="right" | [[1902]]–[[1975]]
 |-
 | style="text-align:left;" |[[Радостев Анатолий Иванович]] 
-| align="right" | ????
+| align="right" | [[1955]]
 |-
 | style="text-align:left;" |Радостев Илья Иванович 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |[[Радостева Ольга Николаевна]] 
-| align="right" | 1968
+| align="right" | [[1968]]
 |-
 | style="text-align:left;" |[[Ратегова Людмила Петровна]] 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |[[Рычков Виктор Васильевич]] 
-| align="right" | 1959
+| align="right" | [[1959]]
 |-
 | style="text-align:left;" |Савельев Николай 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |Самкова Р. 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |Светлаков В. 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |Светлакова Т. 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |[[Спорова Анна Михайловна]] 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |[[Спорова Надежда Александровна]] 
-| align="right" | 1912-1978
+| align="right" | [[1912]]–[[1978]]
 |-
 | style="text-align:left;" |[[Старцева Любовь Афонасьевна|Старцева (Косова) Любовь Афонасьевна]] 
-| align="right" | 1959
+| align="right" | [[1959]]
 |-
 | style="text-align:left;" |Тараканов Фёдор Гаврилович  ([[Гаврив Пёдор]]) 
-| align="right" | 1900-1997
+| align="right" | [[1900 во|1900]]–[[1997]]
 |-
 | style="text-align:left;" |[[Тетюева Зинаида Александровна]] 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |Трубинова Н.
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |[[Тупицын Фёдор Антонович|Тупицын Фёдор Антонович (Онтон Пёдор)]] 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |[[Фадеев Тимофей Павлович]] 
-| align="right" | 1937-1992
+| align="right" | [[1937]]–[[1992]]
 |-
 | style="text-align:left;" |Федосеев Александр 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |Федосеев Николай 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |[[Федосеев Семён Алексеевич]] 
-| align="right" | 1936
+| align="right" | [[1936]]
 |-
 | style="text-align:left;" |Федосеева Надежда Павловна 
-| align="right" | 1974
+| align="right" | [[1974]]
 |-
 | style="text-align:left;" |Хозяшев Николай 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |Четин Юрий 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |Чугайнов Пётр Николаевич 
-| align="right" | 1948
+| align="right" | [[1948]]
 |-
 | style="text-align:left;" |[[Шадрин Иван Алексеевич]] 
-| align="right" | 1915-1962
+| align="right" | [[1915]]–[[1962]]
 |-
 | style="text-align:left;" |Швецов Я. 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |Шипицын В. 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |Яковкин Вениамин 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |Ярков Николай 
-| align="right" | ????
+| align="right" | 
 |-
 | style="text-align:left;" |Яркова Фёкла Степановна 
-| align="right" | ????
+| align="right" | 
 |-
 |}
 
@@ -951,7 +956,7 @@
 * [[Мартынов Валерий Иванович|Мартынов В. И.]] ''Литераторы земли Коми: биобиблиограф. словарь справочник''. – [[Сыктывкар]]: [[Эскӧм (небӧг лэдзанін)|Эскӧм]], [[2000]].
 *''Писатели Коми: биобиблиогр.словарь'' / Науч.ред. [[Дёмин Владимир Николаевич|В.Н. Демин]]; Нац. Б-ка Респ. Коми, Коми науч. центр УрО РАН, Лит.-мемориал. музей И.Куратова. – [[Сыктывкар]]: [б. и.], [[1996]]. Т.I : А-Л. - 374 с.: портр.
 *''Писатели Коми: биобиблиограф. словарь'': Т. 2. М-Я. – [[Сыктывкар]], [[2001]].
-*''Писатели Коми АССР''. Сыктывкар, 1970.
+*''Писатели Коми АССР''. – [[Сыктывкар]], [[1970]].
 
 ==Ыстӧдъяс==
 
