*Empty MediaWiki Message*

--- a/Коми_гижысьяс_анбур_серти.mw
+++ b/Коми_гижысьяс_анбур_серти.mw
@@ -109,7 +109,7 @@
 |[[Елькин Михаил Андреевич]] 	
 |[[1958]]
 |-
-|[[Ельцова Елёна Власовна]] (Алёна Ельцова)  	
+|[[Ельцова Елена Власовна]] (Алёна Ельцова)  	
 |[[1979]]	
 |-
 |[[Ермолин Степан Иванович]] (Вань Степ)
@@ -448,6 +448,9 @@
 |[[Симаков Иван Николаевич]] (Сим Вань)
 |[[1906]]–[[1943]]
 |-
+|[[Сорокин Питирим Александрович]]
+|[[1889 во|1889]]–[[1968]]
+|-
 |[[Старцев Александр Дементьевич]] (Тикöн Öльöксан)	
 |[[1908]]–[[1943]]	
 |-
@@ -559,7 +562,7 @@
 |[[Шаманов Алексей Александрович]]
 |[[1918]]–[[1943]]
 |-
-|[[Шахов Борис Фёдотович]]
+|[[Шахов Борис Федотович]]
 |[[1928]]–[[2002]]
 |-
 |[[Шахов Егор Александрович]] (Сандрик Ёгор, Ö.Е.Шаков)
@@ -602,7 +605,7 @@
 |[[1929]]
 |-
 |[[Шуктомова Анастасия Арсентьевна]]
-|[[1891 во|1891]]-[[1975]]
+|[[1891 во|1891]]–[[1975]]
 |-
 |[[Щербаков Фёдор Васильевич]] (Эдуард Ганс, Ф.Зырянов)
 |[[1914]]–[[1978]]
@@ -623,7 +626,7 @@
 |[[1955]]
 |-
 |[[Ярасов Борис Степанович]] (Биавир)
-|[[1908]]-[[1942]]
+|[[1908]]–[[1942]]
 |-
 |}
 
