*Empty MediaWiki Message*

--- a/Йоруба_(кыв).mw
+++ b/Йоруба_(кыв).mw
@@ -19,7 +19,24 @@
 |A||B||D||E||Ɛ||F||G||Gb||H||I||J||K||KP||L||M||N||O||Ɔ||P||R||S||sh||T||U||W||Y
 |-
 |a||b||d||e||ɛ||f||g||gb||h||i||j||k||kp||l||m||n||o||ɔ||p||r||s||sh||t||u||w||y
-|} 	 	 	 	 	 	 	 	 	 	 	 	 	 	 	 	 	 	 	 	 	 	 	
+|} 
+
+== Лыдакывъяс ==
+
+:1 ọkan / mení
+:2 méjì 
+:3 mẹta
+:4 mẹrin
+:5 màrún
+:6 mẹfà
+:7 méje 
+:8 mẹjọ
+:9 mẹsan 
+:10 mẹwa
+
+== Пример ==
+
+Gbogbo ènìyàn ni a bí ní òmìnira; iyì àti ẹ̀tọ́ kọ̀ọ̀kan sì dọ́gba. Wọ́n ní ẹ̀bùn ti làákàyè àti ti ẹ̀rí-ọkàn, ó sì yẹ kí wọn ó máa hùwà sí ara wọn gẹ́gẹ́ bí ọmọ ìyá. 	 	 	 	 	 	 	 	 	 	 	 	 	 	 	 	 	 	 	 	 	 	 	
 
 == Ыстӧдъяс ==
 
