*Empty MediaWiki Message*

--- a/Лунвыв_Африкаса_Республика.mw
+++ b/Лунвыв_Африкаса_Республика.mw
@@ -1,5 +1,5 @@
 {{Му
-|Коми ним=Лунвыв Африкаса Республика<sup>[[#1|1]]</sup>
+|Коми ним=Лунвыв Африкаса Республика
 |Оригинал ним=
 |Дӧрапас=Flag of South Africa.svg
 |Канпас=Coat_of_arms_of_South_Africa_svg.png
