*Empty MediaWiki Message*

--- a/Лунвыв_Африкаса_Республика.mw
+++ b/Лунвыв_Африкаса_Республика.mw
@@ -1,17 +1,17 @@
 {{Му
-|Коми ним=Лунвыв Африкаса Республика
+|Коми ним=
 |Оригинал ним=
 |Дӧрапас=Flag of South Africa.svg
 |Канпас=Coat_of_arms_of_South_Africa_svg.png
 <!-- |Вместо герба= -->
-|Девиз=!ke e: ǀxarra ǁke ([[Койсан кывъяс|цъхам]])
+|Девиз=!ke e: ǀxarra ǁke ([[цъхам]])
 «Быдсикас йöзыс öтувтчöны»)
 |Кып ним=Nkosi Sikelel' iAfrika 
 <!-- |Аудио= -->
 |Веськӧдлан ног=[[Республика]]
 <!-- |Каналан эскӧм= -->
 |Мусерпас=LocationSouthAfrica.svg
-|Кыв=[[Африкаанс]], [[Англия кыв|англия]], [[зулу]], [[Коса (кыв)|коса]], [[свати]], [[ндебеле (кыв)|ндебеле]], [[сесото]], [[войвыв сото]], [[тсонга (кыв)|тсонга]], [[тсвана (кыв)|тсвана]] да [[венда (кыв)|венда]]
+|Кыв=[[Африкаанс]], [[Англия кыв|англия]], [[зулу (кыв)]], [[Коса (кыв)|коса]], [[свати (кыв)]], [[ндебеле (кыв)|ндебеле]], [[сесото (кыв)]], [[войвыв сото (кыв)]], [[тсонга (кыв)|тсонга]], [[тсвана (кыв)|тсвана]] да [[венда (кыв)|венда]]
 |Дата независимости/Канму панӧм=
 <!-- |Независимость от= -->
 <!-- |Дата ликвидации= -->
@@ -54,15 +54,15 @@
 
 * '''Republiek van Suid-Afrika''' ([[африкаанс]])
 * '''Republic of South Africa''' ([[Англия кыв|англия]])
-* '''IRiphabliki yeSewula Afrika''' ([[лунвыв ндебеле]])
+* '''IRiphabliki yeSewula Afrika''' ([[лунвыв ндебеле |лунвыв ндебеле ]])
 * '''IRiphabliki yaseMzantsi Afrika''' ([[коса (кыв)|коса]])
-* '''IRiphabliki yaseNingizimu Afrika''' ([[зулу]])
-* '''Rephaboliki ya Afrika-Borwa''' ([[войвыв сото]])
-* '''Rephaboliki ya Afrika Borwa''' ([[сесото]])
+* '''IRiphabliki yaseNingizimu Afrika''' ([[зулу |зулу ]])
+* '''Rephaboliki ya Afrika-Borwa''' ([[войвыв сото |войвыв сото ]])
+* '''Rephaboliki ya Afrika Borwa''' ([[сесото |сесото ]])
 * '''Rephaboliki ya Aforika Borwa''' ([[тсвана (кыв)|тсвана]])
 * '''IRiphabhulikhi yeNingizimu Afrika''' ([[свази (кыв)|свази]])
 * '''Riphabuḽiki ya Afurika Tshipembe''' ([[венда (кыв)|венда]])
-* '''Riphabliki ra Afrika Dzonga''' ([[тсонга]])
+* '''Riphabliki ra Afrika Dzonga''' ([[тсонга |тсонга ]])
 
 {{Африка}}
 
