--- a/Лунвыв_Африкаса_Республика.mw
+++ b/Лунвыв_Африкаса_Республика.mw
@@ -1,5 +1,5 @@
 {{Му
-|Коми ним=
+|Коми ним='''Лунвыв Африкаса Республика'''
 |Оригинал ним=
 |Дӧрапас=Flag of South Africa.svg
 |Канпас=Coat_of_arms_of_South_Africa_svg.png
@@ -54,15 +54,15 @@
 
 * '''Republiek van Suid-Afrika''' ([[африкаанс]])
 * '''Republic of South Africa''' ([[Англия кыв|англия]])
-* '''IRiphabliki yeSewula Afrika''' ([[лунвыв ндебеле |лунвыв ндебеле ]])
+* '''IRiphabliki yeSewula Afrika''' ([[лунвыв ндебеле (кыв)]])
 * '''IRiphabliki yaseMzantsi Afrika''' ([[коса (кыв)|коса]])
-* '''IRiphabliki yaseNingizimu Afrika''' ([[зулу |зулу ]])
-* '''Rephaboliki ya Afrika-Borwa''' ([[войвыв сото |войвыв сото ]])
-* '''Rephaboliki ya Afrika Borwa''' ([[сесото |сесото ]])
+* '''IRiphabliki yaseNingizimu Afrika''' ([[зулу]])
+* '''Rephaboliki ya Afrika-Borwa''' ([[войвыв сото]])
+* '''Rephaboliki ya Afrika Borwa''' ([[сесото]])
 * '''Rephaboliki ya Aforika Borwa''' ([[тсвана (кыв)|тсвана]])
 * '''IRiphabhulikhi yeNingizimu Afrika''' ([[свази (кыв)|свази]])
 * '''Riphabuḽiki ya Afurika Tshipembe''' ([[венда (кыв)|венда]])
-* '''Riphabliki ra Afrika Dzonga''' ([[тсонга |тсонга ]])
+* '''Riphabliki ra Afrika Dzonga''' ([[тсонга]])
 
 {{Африка}}
 
