*Empty MediaWiki Message*

--- a/Лунвыв_Африкаса_Республика.mw
+++ b/Лунвыв_Африкаса_Республика.mw
@@ -3,11 +3,9 @@
 |Оригинал ним=
 |Дӧрапас=Flag of South Africa.svg
 |Канпас=Coat_of_arms_of_South_Africa_svg.png
-<!-- |Вместо герба= -->
 |Девиз=!ke e: ǀxarra ǁke ([[цъхам]])
 «Быдсикас йöзыс öтувтчöны»)
 |Кып ним=Nkosi Sikelel' iAfrika 
-<!-- |Аудио= -->
 |Веськӧдлан ног=[[Республика]]
 <!-- |Каналан эскӧм= -->
 |Мусерпас=LocationSouthAfrica.svg
@@ -54,15 +52,15 @@
 
 * '''Republiek van Suid-Afrika''' ([[африкаанс]])
 * '''Republic of South Africa''' ([[Англия кыв|англия]])
-* '''IRiphabliki yeSewula Afrika''' ([[лунвыв ндебеле (кыв)]])
+* '''IRiphabliki yeSewula Afrika''' ([[лунвыв ндебеле (кыв)|лунвыв ндебеле]])
 * '''IRiphabliki yaseMzantsi Afrika''' ([[коса (кыв)|коса]])
-* '''IRiphabliki yaseNingizimu Afrika''' ([[зулу]])
-* '''Rephaboliki ya Afrika-Borwa''' ([[войвыв сото]])
-* '''Rephaboliki ya Afrika Borwa''' ([[сесото]])
+* '''IRiphabliki yaseNingizimu Afrika''' ([[зулу (кыв)|зулу]])
+* '''Rephaboliki ya Afrika-Borwa''' ([[войвыв сото (кыв)|войвыв сото]])
+* '''Rephaboliki ya Afrika Borwa''' ([[сесото (кыв)|сесото]])
 * '''Rephaboliki ya Aforika Borwa''' ([[тсвана (кыв)|тсвана]])
 * '''IRiphabhulikhi yeNingizimu Afrika''' ([[свази (кыв)|свази]])
 * '''Riphabuḽiki ya Afurika Tshipembe''' ([[венда (кыв)|венда]])
-* '''Riphabliki ra Afrika Dzonga''' ([[тсонга]])
+* '''Riphabliki ra Afrika Dzonga''' ([[тсонга (кыв)|тсонга]])
 
 {{Африка}}
 
