*Empty MediaWiki Message*

--- a/Филиппова_Валентина_Викторовна.mw
+++ b/Филиппова_Валентина_Викторовна.mw
@@ -10,7 +10,7 @@
 * [[1990]]–[[1993]] – филология факультетын деканöс вежысь.
 * [[1992]] – дорйис филология наукаясса кандидат ним. 
 * [[1998]] – сылы сетöма доцент звание.
-* [[2012 во|2012]], [[6 рака|рака тöлысь 6 лун]] – кувсис [[Суоми]]ын, [[Хельсинки]]ын научнöй стажировка дырйи.
+* [[2012 во|2012]], [[6 рака|рака тöлысь 6 лун]] – кувсис [[Суоми]]ын, [[Турку]]ын научнöй стажировка дырйи.
 
 == Велöдан удж ==
 Университетын В.В. Филиппова велöдiс коми да роч фольклор, веськöдлiс студентъяслöн да аспирантъяслöн туясян уджöн. Быд во ветлӧдліс фольклор чукӧртан экспедицияясӧ.
