*Empty MediaWiki Message*

--- a/Лунвыв_Африкаса_Республика.mw
+++ b/Лунвыв_Африкаса_Республика.mw
@@ -1,6 +1,16 @@
 {{Му
-|Коми ним='''Лунвыв Африкаса Республика'''
-|Оригинал ним=
+|Коми ним=Лунвыв Африкаса Республика
+|Оригинал ним=Republiek van Suid-Afrika, 
+'''Republic of South Africa,'''
+'''IRiphabliki yeSewula Afrika,''' 
+'''IRiphabliki yaseMzantsi Afrika,''' 
+'''IRiphabliki yaseNingizimu Afrika,''' 
+'''Rephaboliki ya Afrika-Borwa,''' 
+'''Rephaboliki ya Afrika Borwa,''' 
+'''Rephaboliki ya Aforika Borwa,''' 
+'''IRiphabhulikhi yeNingizimu Afrika,''' 
+'''Riphabuḽiki ya Afurika Tshipembe,''' 
+'''Riphabliki ra Afrika Dzonga'''
 |Дӧрапас=Flag of South Africa.svg
 |Канпас=Coat_of_arms_of_South_Africa_svg.png
 |Девиз=!ke e: ǀxarra ǁke ([[цъхам]])
